--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,15 +8,92 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <style>
-    *{
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+    /* @font-face {
+      font-family: ;
+      src: url();
+    } */
+    html, body{
+      height: 100%;
       background-color: black;
+      font-family: 'Press Start 2P';
+    }
+    body{
+      display: flex;
+      width: 100vw;
+      border: 2px solid red;
+      flex-direction: column;
+      padding: 0 50px;
+    }
+    header{
+      height: 10%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     h1{
       color: white;
+      font-size: 2.5rem;
+      /* text-align: center; */
     }
-  </style>
+    li, p{
+      color: lightgrey;
+    }
+    main-menu{
+      height: 80%;
+      display: flex;
+      font-size: 2rem;
+    }
+    left-menu, right-menu{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      list-style-type: none;
+      height: 100%;
+      width: 50%;
+      border: 2px solid orange;
+    }
+    right-menu{
+      align-items: end;
+    }
+    left-menu .menu-item-li{
+      padding-left: 40px;
+    }
+    right-menu .menu-item-li{
+      padding-right: 40px;
+    }
+    .menu-item-li a{
+      text-decoration: none;
+      color: white;
+    }
+    left-menu .menu-item-li a:hover{
+      padding-left: 20px;
+    }
+    right-menu .menu-item-li a:hover{
+      padding-right: 20px;
+    }
+    </style>
   <body>
-    <h1>PONG</h1>
+    <header>
+      <h1>PONG</h1>
+    </header>
+    <main-menu>
+      <left-menu>
+        <li class="menu-item-li"><a href="">HowTo </a></li>
+        <li class="menu-item-li"><a href="">Play          </a></li>
+        <li class="menu-item-li"><a href="">Tournament    </a></li>
+        <li class="menu-item-li"><a href="">Leaderboard   </a></li>
+        <li class="menu-item-li"><a href="">About         </a></li>
+        <li class="menu-item-li"><a href="">Account       </a></li>
+      </left-menu>
+      <right-menu>
+        <li class="menu-item-li"><a href="">vs P2 </a></li>
+        <li class="menu-item-li"><a href="">vs AI </a></li>
+        <li class="menu-item-li"><a href="">local </a></li>
+        <li class="menu-item-li"><a href="">invite</a></li>
+      </right-menu>
+    </main-menu>
+    <footer></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
-</html>
+  </html>
