frontend: added canvas in background of menu

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,13 @@
   </head>
   <style>
   </style>
+    <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
   <body>
     <header>
       <h1>PONG</h1>
-      <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
     </header>
     <main-menu>
+      <canvas></canvas>
       <left-menu>
         <a href="" class="menu-option"><button>HowTo</button></a>
         <a href="pages/play.html" class="menu-option"><button>Play</button></a>
