frontend: added responsive resizing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
       <h1>PONG</h1>
     </header>
     <main-menu>
-      <canvas></canvas>
+      <canvas></canvas> <!-- it is absolute positioned to fit the whole contents of main menu-->
       <left-menu>
         <a href="" class="menu-option"><button>HowTo</button></a>
         <a href="pages/play.html" class="menu-option"><button>Play</button></a>
