--- a/frontend/pages/play.html
+++ b/frontend/pages/play.html
@@ -15,6 +15,7 @@
       <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
     </header>
     <main-menu>
+      <canvas></canvas> <!-- it is absolute positioned to fit the whole contents of main menu-->
       <left-menu>
         <vertical-line></vertical-line>
       </left-menu>
