--- a/frontend/pages/play.html
+++ b/frontend/pages/play.html
@@ -14,15 +14,17 @@
       <h1>PONG</h1>
       <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
     </header>
-    <main-menu>
-      <canvas></canvas> <!-- it is absolute positioned to fit the whole contents of main menu-->
+    <main-menu id="main-frame">
+      <canvas id="gameCanvas" ></canvas> <!-- it is absolute positioned to fit the whole contents of main menu-->
       <left-menu>
-        <vertical-line></vertical-line>
+        <!-- <vertical-line></vertical-line> -->
       </left-menu>
       <right-menu>
       </right-menu>
     </main-menu>
     <footer></footer>
+    <script src="../js/canva.js"></script>
+    <script src="../js/game.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
   </html>
