frontend: animation is working

--- a/frontend/pages/play.html
+++ b/frontend/pages/play.html
@@ -9,7 +9,7 @@
   </head>
   <style>
   </style>
-  <body>
+  <body onload="startGame()">
     <header>
       <h1>PONG</h1>
       <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
