--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,45 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PONG</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles/style.css">
-  </head>
-  <style>
-  </style>
-    <a type="button" class="btn btn-warning" id="sign-up" href="">Sign up</a> 
-  <body>
-    <header>
-      <h1>PONG</h1>
-    </header>
-    <main-menu id="main-frame">
-      <canvas id="gameCanvas"></canvas> <!-- it is absolute positioned to fit the whole contents of main menu-->
-      <left-menu>
-        <a href="" class="menu-option"><button>HowTo</button></a>
-        <a href="pages/play.html" class="menu-option"><button>Play</button></a>
-        <a href="" class="menu-option"><button>Tournament</button></a>
-        <a href="" class="menu-option"><button>Leaderboard</button></a>
-        <a href="" class="menu-option"><button>About</button></a>
-        <a href="" class="menu-option"><button>Account</button></a>
-        <!-- <vertical-line></vertical-line> -->
-      </left-menu>
-      <right-menu>
-        <a href="" class="menu-option"><button>vs P2</button></a>
-        <a href="" class="menu-option"><button>vs AI</button></a>
-        <a href="" class="menu-option"><button>local</button></a>
-        <a href="" class="menu-option"><button>invite</button></a>
-      </right-menu>
-    </main-menu>
-    <footer></footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      document.addEventListener('keydown', doLog);
-      function doLog(e){
-        console.log("jo");
-      }
-    </script>
-    <script src="js/canva.js"></script>
-  </body>
-  </html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>PONG</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+  <header>PONG</header>
+  <main-menu>
+    <canvas id="gameCanvas"></canvas>
+    <left-menu>
+      <div class="menu-option"><button>HowTo</button></div>
+      <div class="menu-option"><button>Play</button></div>
+      <div class="menu-option"><button>Tournament</button></div>
+      <div class="menu-option"><button>Leaderboard</button></div>
+      <div class="menu-option"><button>About</button></div>
+      <div class="menu-option"><button>Account</button></div>
+    </left-menu>
+    <right-menu>
+      <div id="right-menu-container"></div> <!-- Container for dynamic content -->
+    </right-menu>
+  </main-menu>
+  <footer></footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/canva.js"></script>
+  <script src="js/main.js"></script> <!-- Add your JavaScript file here -->
+</body>
+</html>
