added animations, cursor, grid support

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,12 +12,12 @@
   <main-menu>
     <canvas id="gameCanvas"></canvas>
     <left-menu>
-      <div class="menu-option"><button>HowTo</button></div>
-      <div class="menu-option"><button>Play</button></div>
-      <div class="menu-option"><button>Tournament</button></div>
-      <div class="menu-option"><button>Leaderboard</button></div>
-      <div class="menu-option"><button>About</button></div>
-      <div class="menu-option"><button>Account</button></div>
+      <div class="menu-option"><button>HowTo</button><span class="button-description">What is this?</span></div>
+      <div class="menu-option"><button>Play</button><span class="button-description">How would you like your PONG today?</span></div>
+      <div class="menu-option"><button>Tournament</button><span class="button-description">Will you dare?!</span></div>
+      <div class="menu-option"><button>Leaderboard</button><span class="button-description">Lets find out who is the best!</span></div>
+      <div class="menu-option"><button>About</button><span class="button-description">ft_transcendence at 42 Heilbronn</span></div>
+      <div class="menu-option"><button>Account</button><span class="button-description">Who are you anyway?</span></div>
     </left-menu>
     <right-menu>
       <div id="right-menu-container"></div> <!-- Container for dynamic content -->
@@ -26,6 +26,6 @@
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/canva.js"></script>
-  <script src="js/main.js"></script> <!-- Add your JavaScript file here -->
+  <!-- <script src="js/main.js"></script> Add your JavaScript file here -->
 </body>
 </html>
