--- a/frontend/rightside/play.html
+++ b/frontend/rightside/play.html
@@ -4,24 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play</title>
-	<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="styles/style.css"> -->
-    <!-- <style>
-        .menu-option {
-            margin: 10px 0;
-        }
-        .menu-option button {
-            width: 100%;
-            padding: 10px;
-            font-size: 1em;
-            cursor: pointer;
-        }
-    </style> -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-		<div class="menu-option"><button>vs P2</button></div>
-		<div class="menu-option"><button>vs AI</button></div>
-		<div class="menu-option"><button>Local</button></div>
-		<div class="menu-option"><button>Invite</button></div>
+    <!-- <main-menu> -->
+        <right-menu>
+            <div class="menu-option"><button>vs P2</button><span class="button-description">What is this?</span></div>
+            <div class="menu-option"><button>vs AI</button></div>
+            <div class="menu-option"><button>Local</button></div>
+            <div class="menu-option"><button>Invite</button></div>
+        </right-menu>
+    <!-- </main-menu> -->
 </body>
 </html>
