--- a/frontend/rightside/play.html
+++ b/frontend/rightside/play.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Play</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="../styles/style.css">
-</head>
-<body>
-    <!-- <main-menu> -->
-        <right-menu>
-            <div class="menu-option"><button>vs P2</button><span class="button-description">What is this?</span></div>
-            <div class="menu-option"><button>vs AI</button></div>
-            <div class="menu-option"><button>Local</button></div>
-            <div class="menu-option"><button>Invite</button></div>
-        </right-menu>
-    <!-- </main-menu> -->
-</body>
-</html>
+    <div class="menu-option"><button>vs P22</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button>vs AI</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button>Local</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button>Invite</button><span class="button-description">What is this?</span></div>
+    <script src="js/canva.js"></script>
