fixed right side cursor excitement!

--- a/frontend/rightside/play.html
+++ b/frontend/rightside/play.html
@@ -1,5 +1,5 @@
-    <div class="menu-option"><button>vs P22</button><span class="button-description">What is this?</span></div>
-    <div class="menu-option"><button>vs AI</button><span class="button-description">What is this?</span></div>
-    <div class="menu-option"><button>Local</button><span class="button-description">What is this?</span></div>
-    <div class="menu-option"><button>Invite</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button class>vs P2</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button class>vs AI</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button class>Local</button><span class="button-description">What is this?</span></div>
+    <div class="menu-option"><button class>Invite</button><span class="button-description">What is this?</span></div>
     <script src="js/canva.js"></script>
