Play & Tournament buttons fixed, leaderboard added

--- a/frontend/rightside/leaderboard.html
+++ b/frontend/rightside/leaderboard.html
@@ -1,46 +1,63 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leaderboard</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: left;
-        }
-        th {
-            background-color: #4CAF50;
-            color: white;
-        }
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>Player</th>
-                <th>Score</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr><td><a href="#">Player 1</a></td><td>1000</td></tr>
-            <tr><td><a href="#">Player 2</a></td><td>950</td></tr>
-            <tr><td><a href="#">Player 3</a></td><td>900</td></tr>
-            <tr><td><a href="#">Player 4</a></td><td>850</td></tr>
-            <tr><td><a href="#">Player 5</a></td><td>800</td></tr>
-            <tr><td><a href="#">Player 6</a></td><td>750</td></tr>
-            <tr><td><a href="#">Player 7</a></td><td>700</td></tr>
-            <tr><td><a href="#">Player 8</a></td><td>650</td></tr>
-        </tbody>
-    </table>
-</body>
-</html>
+<div class="leaderboard-entry">
+    <div class="score">234</div>
+    <div class="menu-option">
+        <button>OfflineUser</button>
+        <span class="button-description">Some custom offline user</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">198</div>
+    <div class="menu-option">
+        <button>PlayerTwo</button>
+        <span class="button-description">Always second best</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">179</div>
+    <div class="menu-option">
+        <button>GameMaster</button>
+        <span class="button-description">Master of the game</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">165</div>
+    <div class="menu-option">
+        <button>ChallengeSeeker</button>
+        <span class="button-description">Looking for the next challenge</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">154</div>
+    <div class="menu-option">
+        <button>Nocturnal</button>
+        <span class="button-description">Plays best at night</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">125</div>
+    <div class="menu-option">
+        <button>EarlyBird</button>
+        <span class="button-description">Up and at 'em!</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">99</div>
+    <div class="menu-option">
+        <button>CasualJoe</button>
+        <span class="button-description">Just passing time</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">68</div>
+    <div class="menu-option">
+        <button>Rookie</button>
+        <span class="button-description">New to the game</span>
+    </div>
+</div>
+<div class="leaderboard-entry">
+    <div class="score">45</div>
+    <div class="menu-option">
+        <button>LastStand</button>
+        <span class="button-description">Never gives up</span>
+    </div>
+</div>
