--- a/frontend/rightside/tournament.html
+++ b/frontend/rightside/tournament.html
@@ -1,23 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tournament</title>
-    <!-- <style>
-        .menu-option {
-            margin: 10px 0;
-        }
-        .menu-option button {
-            width: 100%;
-            padding: 10px;
-            font-size: 1em;
-            cursor: pointer;
-        }
-    </style> -->
-</head>
-<body>
-    <div class="menu-option"><button>Local</button></div>
-    <div class="menu-option"><button>Remote</button></div>
-</body>
-</html>
+<div class="menu-option"><button class>local</button><span class="button-description">Set up 3-8 local players and start!</span></div>
+<div class="menu-option"><button class>remote</button><span class="button-description">Join next session of remote tournament!</span></div>
