wip - Need to fix socket paths

--- a/frontend/game/matchmaking.html
+++ b/frontend/game/matchmaking.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>PONG</title>
-</head>
-<body style="background: gray">
-	Connection done automatically. check console
-    <script src="matchmaking.js"></script>
-</body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#	<meta charset="UTF-8">#}
+{#	<title>PONG</title>#}
+{#</head>#}
+{#<body style="background: gray">#}
+{#	Connection done automatically. check console#}
+{#    <script src="matchmaking.js"></script>#}
+{#</body>#}
+{#</html>#}
