--- a/frontend/game/game.html
+++ b/frontend/game/game.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>PONG</title>
-</head>
-<body style="background: gray">
-	<canvas id="pongCanvas" width="800" height="600"></canvas>
-	<script src="pong.js"></script>
-</body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#	<meta charset="UTF-8">#}
+{#	<title>PONG</title>#}
+{#</head>#}
+{#<body style="background: gray">#}
+{#	<canvas id="pongCanvas" width="800" height="600"></canvas>#}
+{#	<script src="pong.js"></script>#}
+{#</body>#}
+{#</html>#}
