Updated frontend test page

--- a/frontend/game/test.html
+++ b/frontend/game/test.html
@@ -21,20 +21,27 @@
 </head>
 <body>
     <h1>Pong Game</h1>
+    <p>Open console to see more</p>
     <button id="startMatchmakingBtn">Start Matchmaking</button>
-    <canvas id="pongCanvas" width="800" height="600" style="display:none;"></canvas>
+    <canvas id="pongCanvas" width="1280" height="720" style="display:none;"></canvas>
     <script>
-        players = []
+        var y = Math.random();
+        if (y < 0.5)
+          y = 1;
+        else
+          y= 2;
+        const player = "player" + y;
+        console.log("PLAYER: ", player);
         const startMatchmaking = () => {
             console.log("Trying to setup connection....");
             const matchmakingSocket = new WebSocket('ws://127.0.0.1:8002/ws/matchmaking/');
 
             matchmakingSocket.onopen = () => {
                 console.log("Matchmaking socket connection established");
+
                 matchmakingSocket.send(JSON.stringify({
                     action: 'join_queue',
-                    // Generate a random player name for testing purposes.
-                    username: 'player_' + Math.random()
+                    username: player,
                 }));
             };
 
@@ -44,7 +51,7 @@
 
                 if (data.type === 'match_found') {
                     console.log("Match found: ", data.message);
-                    startGame(data.message.game.id);
+                    startGame(data.message.message.id);
                 }
             };
 
@@ -58,7 +65,7 @@
             const ctx = canvas.getContext('2d');
             canvas.style.display = 'block';
 
-            const ws = new WebSocket(`ws://127.0.0.1:8002/ws/game/lobby_id=${lobbyId}`);
+            const ws = new WebSocket(`ws://127.0.0.1:8002/ws/game/${lobbyId}/`);
 
             ws.onopen = (event) => {
                 console.log("Websocket is now open!", event);
@@ -77,7 +84,6 @@
                 console.log("Got new message: ", data);
 
                 if (data.type === 'game') {
-                    console.log('Game state: ', data.message);
                     updateGame(data.message);
                 }
             };
@@ -91,14 +97,16 @@
                     ctx.fillRect(0, 0, canvas.width, canvas.height);
 
                     // Draw paddles
-                    ctx.fillStyle = "white";
+                    ctx.fillStyle = "red";
+                    console.log("Player 1 position: (X: ", gameState.paddle_positions.player1.x, " Y: ", gameState.paddle_positions.player1.y);
+                    console.log("Player 2 position: (X: ", gameState.paddle_positions.player2.x, " Y: ", gameState.paddle_positions.player2.y);
                     ctx.fillRect(gameState.paddle_positions.player1.x, gameState.paddle_positions.player1.y, 10, 75);
                     ctx.fillRect(gameState.paddle_positions.player2.x, gameState.paddle_positions.player2.y, 10, 75);
 
                     // Draw ball
                     ctx.beginPath();
                     ctx.arc(gameState.ball_position.x, gameState.ball_position.y, 10, 0, Math.PI * 2);
-                    ctx.fillStyle = "#0095DD";
+                    ctx.fillStyle = "red";
                     ctx.fill();
                     ctx.closePath();
                 } else {
@@ -111,13 +119,13 @@
                 if (event.code === "KeyW") {
                     action = {
                         action: 'move_paddle',
-                        player: 'player1', // Adjust accordingly
+                        player: player, // Adjust accordingly
                         direction: 'up'
                     };
                 } else if (event.code === "KeyS") {
                     action = {
                         action: 'move_paddle',
-                        player: 'player1', // Adjust accordingly
+                        player: player, // Adjust accordingly
                         direction: 'down'
                     };
                 }
