--- a/frontend/rightside/howto.html
+++ b/frontend/rightside/howto.html
@@ -1,7 +1,7 @@
 <div class="how-to-container">
     <div class="description-container">
-        <h1 id="power-title">How To</h1>
-        <p id="description">Hover over the power buttons to see their description.</p>
+        <h1 id="power-title">HowTo?</h1>
+        <p id="description">Hover over the powers to see their description.</p>
     </div>
     <div class="atk-def-container">
         <div class="atk-powers">
