--- a/frontend/rightside/howto.html
+++ b/frontend/rightside/howto.html
@@ -1,7 +1,7 @@
 <div class="how-to-container">
     <div class="description-container">
         <h1 id="power-title">HowTo?</h1>
-        <p id="description">Hover over the powers to see their description.</p>
+        <p id="description">Collect Powers and use them with ATK and DEF keys!<br> Hover over the powers to see their descriptions.</p>
     </div>
     <div class="atk-def-container">
         <div class="atk-powers">
@@ -13,6 +13,7 @@
     </div>
     <div class="controls">
         <h2>Controls</h2>
+        <img src="styles/keys.png" alt="Controls" style="height: auto; width: auto; pointer-events: none;" />
     </div>
 </div>
 
