--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,35 @@
   <title>PONG</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
+  <style>
+	login-button{
+		position: absolute;
+		top: 20px;
+		right: 30px;
+	}
+	login-modal{
+		/* border: 2px solid red; */
+		display: none;
+		position: fixed;
+		z-index: 1;
+		left: 10px;
+		right: 10px;
+		width: 60%;
+		height: 80%;
+		margin: 0 auto;
+		background-color: orange;
+	}
+	/* https://www.w3schools.com/howto/howto_css_modals.asp */
+  </style>
 </head>
 <body>
   <header>PONG</header>
+  <login-button type="button" class="btn btn-warning btn-lg" id="login-button">LOGIN</login-button>
+  <login-modal id="login-modal">
+	<div class="modal-content">
+		<close-button type="button" class="btn btn-dark btn-sm" id="close-button">&times;</close-button>
+	</div>
+  </login-modal>
   <main-menu>
     <canvas id="gameCanvas"></canvas>
     <left-menu>
@@ -26,6 +52,7 @@
   <footer></footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/canva.js"></script>
+  <script src="js/login.js"></script>
   <!-- <script src="js/main.js"></script> Add your JavaScript file here -->
 </body>
 </html>
