fixed element scaling

--- a/frontend/rightside/howto.html
+++ b/frontend/rightside/howto.html
@@ -5,15 +5,14 @@
     </div>
     <div class="atk-def-container">
         <div class="atk-powers">
-            <h2>ATK</h2>
+            ATK
         </div>
         <div class="def-powers">
-            <h2>DEF</h2>
+            DEF
         </div>
     </div>
     <div class="controls">
-        <h2>Controls</h2>
-        <img src="styles/keys.png" alt="Controls" style="height: auto; width: auto; pointer-events: none;" />
+        <img src="styles/keys.png" alt="Controls" style="max-height: 100%; max-width: 60%; height: auto; width: auto; pointer-events: none;" />
     </div>
 </div>
 
