--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,80 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>PONG</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
-  <style>
-	login-button{
-		position: absolute;
-		top: 20px;
-		right: 30px;
-	}
-	login-modal{
-		/* border: 2px solid red; */
-		/* display: none; */
-		position: fixed;
-		z-index: 1;
-		left: 10px;
-		right: 10px;
-		width: 70%;
-		height: 80%;
-		margin: 0 auto;
-		background-color: orange;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size: 20px;
-	}
-	.modal-content{
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-		border: 2px solid red;
-		height: 100%;
-		width: 100%;
-	}
-	.modal-content form{
-		display:block;
-		width: 50%;
-	}
-	.modal-content form input{
-		line-height: 2.5rem;
-	}
-	.modal-content form .form-text{
-		font-size: 1rem;
-		/* background-color: red; */
-		text-align: center;
-
-	}
-	.modal-content form .form-text p{
-		/* border: 2px solid green; */
-		margin:2px;
-	}
-	#close-button{
-		position: absolute;
-		top: 5px;
-		right: 5px;
-	}
-	div .button-align{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-	#signin-button{
-		font-size: 2rem;
-	}
-	#fortyAuth-button{
-		font-size: 1.5rem;
-		margin-top: 7%;
-	}
-	/* https://www.w3schools.com/howto/howto_css_modals.asp */
-  </style>
+  <link rel="stylesheet" href="styles/login.css">
 </head>
+
 <body>
   <header>PONG</header>
+  <!-- LOGIN -->
   <login-button type="button" class="btn btn-warning btn-lg" id="login-button">LOGIN</login-button>
   <login-modal id="login-modal">
 	<div class="modal-content">
@@ -82,17 +20,17 @@
 		<form name="login-form">
 			<div class="mb-3 mt-5">
 				<label for="uname" class="form-label">Username</label>
-				<input id="uname" type="email" class="form-control" aria-describedby="emailHelp">
+				<input id="uname" type="text" class="form-control" required>
 			</div>
 			<div class="mb-3">
-				<label for="pwd" class="form-label">Password</label>
-				<input id="pwd" type="password" class="form-control" aria-label="default password">
+				<label for="loginpwd" class="form-label">Password</label>
+				<input id="loginpwd" type="password" class="form-control" required>
 			</div>
 			<div class="mt-4 button-align">
 				<button type="submit" class="btn btn-dark btn-lg" id="signin-button" style="width: 90%">Sign In</button>
 			</div>
 			<div class="form-text">
-				<p>Don’t have an account yet?  <button type="button" id="registerButton">Create an account</button>.</p>
+				<p>Don’t have an account yet?  <button type="button" id="GoToRegister-button">Create an account</button>.</p>
 				<p>Or directly login with your 42 Account below.</p>
 			</div>
 			<div class="mt-5 button-align">
@@ -101,11 +39,33 @@
 		</form>
 	</div>
   </login-modal>
-  <!-- <login-modal id="register-modal">
+  <!-- REGISTRATION -->
+  <login-modal id="register-modal">
 	<div class="modal-content">
 		<close-button type="button" class="btn btn-dark btn-sm" id="close-button">&times;</close-button>
+		<form name="register-form">
+			<div class="mb-3 mt-5">
+				<label for="registeruname" class="form-label">Username</label>
+				<input id="registeruname" type="text" class="form-control" required>
+			</div>
+			<div class="mb-3">
+				<label for="registerpwd" class="form-label">Password</label>
+				<input id="registerpwd" type="password" class="form-control" required>
+			</div>
+			<div class="mb-3">
+				<label for="registerpwd2" class="form-label">Repeat Password</label>
+				<input id="registerpwd2" type="password" class="form-control" required>
+			</div>
+			<div class="mt-4 button-align">
+				<button type="submit" class="btn btn-dark btn-lg" id="register-button" style="width: 90%">Register</button>
+			</div>
+			<div class="form-text">
+				<p>Already have an account?  <button type="button" id="GoToSignIn-button">Sign In</button>.</p>
+			</div>
+		</form>
 	</div>
-  </login-modal> -->
+  </login-modal>
+  <!-- MAIN MENU LEFT SIDE -->
   <main-menu>
     <canvas id="gameCanvas"></canvas>
     <left-menu>
