--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,10 +13,10 @@
 <body>
   <header>PONG</header>
   <!-- LOGIN -->
-  <login-button type="button" class="btn btn-warning btn-lg" id="login-button">LOGIN</login-button>
+  <login-button type="button" class="btn btn-lg" id="login-button">LOGIN</login-button>
   <login-modal id="login-modal">
 	<div class="modal-content">
-		<close-button type="button" class="btn btn-dark btn-sm" id="close-button">&times;</close-button>
+		<close-button type="button" class="btn btn-sm" id="close-button"><div>&times;</div></close-button>
 		<form name="login-form">
 			<div class="mb-3 mt-5">
 				<label for="uname" class="form-label">Username</label>
@@ -42,8 +42,9 @@
   <!-- REGISTRATION -->
   <login-modal id="register-modal">
 	<div class="modal-content">
-		<close-button type="button" class="btn btn-dark btn-sm" id="close-button">&times;</close-button>
-		<form name="register-form">
+		<close-button type="button" class="btn btn-sm" id="close-button"><div>&times;</div></close-button>
+		<form name="register-form"> 
+			<!-- method="post" action="/api/auth/register/" -->
 			<div class="mb-3 mt-5">
 				<label for="registeruname" class="form-label">Username</label>
 				<input id="registeruname" type="text" class="form-control" required>
