changed port to 8000 for fetch in frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,10 +23,10 @@
   <login-modal id="login-modal">
 	<div class="modal-content">
 		<close-button type="button" class="btn btn-sm" id="close-button"><div>&times;</div></close-button>
-		<form name="login-form">
+		<form name="login-form" id="login-form">
 			<div class="mb-3 mt-5">
-				<label for="uname" class="form-label">Username</label>
-				<input id="uname" type="text" class="form-control" required>
+				<label for="loginuname" class="form-label">Username</label>
+				<input id="loginuname" type="text" class="form-control" required>
 			</div>
 			<div class="mb-3">
 				<label for="loginpwd" class="form-label">Password</label>
