account button removed, menu button placement feature added, overflow bug fixed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,8 +16,8 @@
       <div class="menu-option"><button>Play</button><span class="button-description">How would you like your PONG today?</span></div>
       <div class="menu-option"><button>Tournament</button><span class="button-description">Will you dare?!</span></div>
       <div class="menu-option"><button>Leaderboard</button><span class="button-description">Lets find out who is the best!</span></div>
-      <div class="menu-option"><button>About</button><span class="button-description">ft_transcendence at 42 Heilbronn</span></div>
-      <div class="menu-option"><button>Account</button><span class="button-description">Who are you anyway?</span></div>
+      <div class="menu-option" style="grid-row-start: 5;"><button>About</button><span class="button-description">ft_transcendence at 42 Heilbronn</span></div>
+      <!-- <div class="menu-option"><button>Account</button><span class="button-description">Who are you anyway?</span></div> -->
     </left-menu>
     <right-menu>
       <div id="right-menu-container"></div> <!-- Container for dynamic content -->
